# anime-front

./: .gitignore  package.json
.history/: package_20240809170826.json  package_20240809170925.json  package_20240809174628.json  vite.config_20240809171106.js
.history/src/: app_20240810234751.html
.history/src-tauri/: Cargo_20240809170826.toml  Cargo_20240809172120.toml  Cargo_20240810010822.toml  Cargo_20240810011234.toml  Cargo_20240810011332.toml  Cargo_20240810101236.toml  Cargo_20240810101433.toml  Cargo_20240810132730.toml  tauri.conf_20240809170826.json  tauri.conf_20240809172103.json  tauri.conf_20240810124918.json  tauri.conf_20240810124951.json  tauri.conf_20240810125045.json  tauri.conf_20240810132701.json  tauri.conf_20240810151423.json  tauri.conf_20240810151426.json  tauri.conf_20240810152514.json
.history/src-tauri/capabilities/: main_20240810132328.json
.history/src-tauri/src/: lib_20240810125156.rs  lib_20240810125205.rs  lib_20240810125640.rs  lib_20240810132956.rs  lib_20240810133030.rs  lib_20240810133049.rs  lib_20240810145637.rs  lib_20240810145817.rs  lib_20240810145904.rs  lib_20240810151347.rs  lib_20240810211740.rs  lib_20240810211812.rs  lib_20240810211954.rs  lib_20240810212126.rs  lib_20240810212136.rs  lib_20240810212147.rs  lib_20240810212159.rs  lib_20240810212450.rs  (+26 more)
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: commands.rs  lib.rs  page.rs  websocket.rs
src/lib/: index.ts  store.ts
src/routes/: +page.svelte
static/style/: global.css
(+903 files in other folders)
