[package]
name = "front"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "front_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"

serde = { version = "1", features = ["derive"] }
serde_json = {version = "1"}
serde_repr = "0.1"

ureq = { version = "2.10", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3.29"

num = "0.4"
num-derive = "0.4"
num-traits = "0.2"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.25"

[features]
default = ["rustls-tls"]
native-tls = ["tokio-tungstenite/native-tls"]
native-tls-vendored = ["native-tls", "tokio-tungstenite/native-tls-vendored"]
rustls-tls = ["tokio-tungstenite/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["tokio-tungstenite/rustls-tls-native-roots"]
